fixing server roles and removed text-align on member list

--- a/actual-thing/main.css
+++ b/actual-thing/main.css
@@ -48,10 +48,10 @@
     height: auto;
 }
 
-.channel-members,
+/*channel-members,
 [class^='memberInner']{
     text-align: center !important;
-}
+}*/
 
 /*[class^='containerDefault']{
     padding-top: 12px;
